gcc/testsuite/rust/rustc/ui/suggestions/suggest-semicolon-for-fn-in-extern-block_dg.rs
//@ run-rustfix

#[allow(dead_code)]

extern "C" {
  fn foo() // { dg-error "" "" { target *-*-* } }
}

fn main() {}

